--- a/templates/deal/deal.html.twig
+++ b/templates/deal/deal.html.twig
@@ -27,6 +27,36 @@
                         <p>Expiration date: {{ deal.ExpirationDate|date('d/m/Y') }}</p>
                     </div>
                 </div>
+                <div class="d-flex justify-content-center">
+                    {% if app.user %}
+                        <a href="{{ path('app_deal', {'id': deal.id}) }}" class="btn btn-primary me-2 mb-2">Save</a>
+                    {% else %}
+                        <a href="{{ path('app_login') }}" class="btn btn-primary me-2 mb-2">Save</a>
+                    {% endif %}
+                    {% if app.user %}
+                        <div class="btn-group">
+                        <a href="{{ path('app_deal_increment_reports', {'id': deal.id}) }}" class="btn btn-primary mb-2" id="report-button">Report <i class="fas fa-flag"></i></a>
+                        <div id="report-form" style="display: none;">
+                            <form action="{{ path('app_deal', {'id': deal.id}) }}" method="POST" class="d-flex">
+                            <input type="text" name="reason" placeholder="Enter reason for report" required class="form-control me-2 mb-2">
+                            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                            </form>
+                        </div>
+                        </div>
+                    {% else %}
+                        <a href="{{ path('app_login') }}" class="btn btn-primary mb-2">Report</a>
+                    {% endif %}
+                    </div>
+
+                    <script>
+                    const reportButton = document.getElementById('report-button');
+                    const reportForm = document.getElementById('report-form');
+
+                    reportButton.addEventListener('click', function(event) {
+                        event.preventDefault();
+                        reportForm.style.display = 'block';
+                    });
+                    </script>
             </div>
         </div>
     </div>
@@ -49,7 +79,7 @@
 </div>
 
 {# espace sauvegarde et signalement #}
-<div class="row g-0 mx-auto p-2 wrapper-center">
+{# <div class="row g-0 mx-auto p-2 wrapper-center">
     <div class="col-md-9">
         <div class="d-flex justify-content-between">
             {% if app.user %}
@@ -64,7 +94,7 @@
             {% endif %}
         </div>
     </div>
-</div>
+</div> #}
 
 {# espace commentaires #}
 <div class="row g-0 mx-auto p-2 wrapper-center">
