--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -14,6 +14,54 @@
                 color: $white;
             }
         }
+
+        .menu-button {
+            position: relative;
+            padding: 0.32rem 1rem;
+            border: 2px solid transparent;
+            &:hover {
+                background-color: #5d5f62;
+            }
+
+            &::after {
+                margin-left: 0.5em;
+            }
+
+            &:active {
+                opacity: .5;
+                border-color: #5d5f62;
+            }
+
+            &.show {
+                background-color: #868789;
+                border-color: #868789;
+                color: $white;
+                &:hover {
+                    border-color: #9e9fa1;
+                }
+            }
+        }
+
+        .dropdown-menu {
+            background-color: #1d1f20;
+            border-color: #1d1f20;
+            position: absolute;
+            top: 44px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+            padding: 10px 0;
+            -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3); 
+            box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3);
+
+            .dropdown-item {
+                font-weight: 700;
+                color: hsla(0, 0%, 100%, 0.8);
+                &:hover {
+                    color: $white;
+                    background-color: #1d1f20;
+                }
+            }
+        }
     }
 
     .navbar-utilities {
