--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -96,7 +96,7 @@
             }
 
             .btn-logout {
-                background-color: red;
+                background-color: #5d5f62;
             }
 
             .btn-post {
