--- a/assets/styles/pages/_login.scss
+++ b/assets/styles/pages/_login.scss
@@ -1,15 +1,15 @@
-.wrapper-login {
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
-    max-width: 50vw;
-    display: flex;
-    align-items: center;
-    background-color: #35373b;
-    .wrapper-register {
-        color: $white;
-        margin: 0 50px;
-        .register-title {
+// .wrapper-login {
+//     font-family: 'Poppins', sans-serif;
+//     width: 100%;
+//     max-width: 50vw;
+//     display: flex;
+//     align-items: center;
+//     background-color: #35373b;
+//     .wrapper-register {
+//         color: $white;
+//         margin: 0 50px;
+//         .register-title {
 
-        }
-    }
-}
+//         }
+//     }
+// }
