--- a/assets/styles/abstracts/_globals.scss
+++ b/assets/styles/abstracts/_globals.scss
@@ -1,3 +1,8 @@
+* {
+    &:disabled {
+        cursor: not-allowed;
+    }
+}
 .shape-circle {
     border-radius: 50vh !important;
 }
@@ -9,4 +14,13 @@
 .wrapper-center {
     width: 100%;
     max-width: 65vw;
+}
+
+.btn-primary {
+    background-color: #5d5f62;
+    border-color: #5d5f62;
+    &:hover {
+        background-color: #868789;
+        border-color: #868789;
+    }
 }
