--- a/templates/deal/deal.html.twig
+++ b/templates/deal/deal.html.twig
@@ -7,44 +7,44 @@
     {# card du deal #}
     <div class="col-md-9">
         <h1>Deal detail</h1>
-        <div class="card mb-3 me-3">
+        <div class="card mb-3 me-3{% if deal.isExpired %} expired{% endif %}">
             <div class="row g-0">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                <div class="col-md-4 d-flex justify-content-center align-items-center pt-5">
                     <img src="https://picsum.photos/200" class="img-fluid rounded" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
                         <div class="container">
                             <div class="btn-group rate-deal-container shape-circle" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}">
-                                <a class="btn shape-circle rate-deal decrease" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Negative vote"><i class="fas fa-minus"></i></a>
+                                <a class="btn shape-circle rate-deal decrease" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Negative vote"{% if deal.isExpired %} disabled{% endif %}><i class="fas fa-minus"></i></a>
                                 <p class="px-1"><span class="notation-value-{{ deal.id }}">{{ deal.notation }}</span>°</p>
-                                <a class="btn shape-circle rate-deal increase" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Positive vote"><i class="fas fa-plus"></i></a>
+                                <a class="btn shape-circle rate-deal increase" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Positive vote"{% if deal.isExpired %} disabled{% endif %}><i class="fas fa-plus"></i></a>
                             </div>
                         </div>
                         <h2>{{ deal.Title }}</h2>
                         <p>{{ deal.Description }}</p>
                         <p>{{ deal.Price }}€</p>
-                        <p>Expiration date: {{ deal.ExpirationDate|date('d/m/Y') }}</p>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-end">
                     {% if app.user %}
-                        <a href="{{ path('app_deal', {'id': deal.id}) }}" class="btn btn-primary me-2 mb-2">Save</a>
-                    {% else %}
-                        <a href="{{ path('app_login') }}" class="btn btn-primary me-2 mb-2">Save</a>
-                    {% endif %}
-                    {% if app.user %}
+                        <a href="{{ path('app_deal', {'id': deal.id}) }}" class="btn btn-primary me-2 mb-2"{% if deal.isExpired %} disabled{% endif %}>Save</a>
                         <div class="btn-group">
-                            <a href="{{ path('app_deal_increment_reports', {'id': deal.id}) }}" class="btn btn-primary mb-2" id="report-button">Report <i class="fas fa-flag"></i></a>
-                            <div id="report-form" style="display: none;">
+                            <a href="{{ path('app_deal_increment_reports', {'id': deal.id}) }}" class="btn btn-primary me-2 mb-2" id="report-button"{% if deal.isExpired %} disabled{% endif %}>Report <i class="fas fa-flag"></i></a>
+                            <div id="report-form">
                                 <form action="{{ path('app_deal', {'id': deal.id}) }}" method="POST" class="d-flex">
-                                <input type="text" name="reason" placeholder="Enter reason for report" required class="form-control me-2 mb-2">
-                                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                                    <input type="text" name="reason" placeholder="Enter reason for report" required class="form-control me-2 mb-2">
+                                    <button type="submit" class="btn btn-primary me-2 mb-2">Submit</button>
                                 </form>
                             </div>
                         </div>
+                        {% if deal.isExpired == false %}
+                            <a href="{{ path('app_deal_expired', {'id': deal.id}) }}" class="btn btn-primary me-2 mb-2">Is expired?</a>
+                        {% endif %}
                     {% else %}
-                        <a href="{{ path('app_login') }}" class="btn btn-primary mb-2">Report <i class="fas fa-flag"></i></a>
+                        <a href="{{ path('app_login') }}" class="btn btn-primary me-2 mb-2"{% if deal.isExpired %} disabled{% endif %}>Save</a>
+                        <a href="{{ path('app_login') }}" class="btn btn-primary me-2 mb-2"{% if deal.isExpired %} disabled{% endif %}>Report <i class="fas fa-flag"></i></a>
+                        <a href="{{ path('app_login') }}" class="btn btn-primary me-2 mb-2"{% if deal.isExpired %} disabled{% endif %}>Is expired?</a>
                     {% endif %}
                 </div>
             </div>
@@ -60,7 +60,6 @@
                         <h2>{{ deal.Title }}</h2>
                         <p>{{ deal.Description }}</p>
                         <p>Price: {{ deal.Price }}</p>
-                        <p>Expiration date: {{ deal.ExpirationDate|date('d/m/Y') }}</p>
                     </li>
                 {% endfor %}
             </ul>
