--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
         <div class="col-9">
             <h1>Deals list</h1>
             <ul class="deal-list">
-                {% for deal in featuredDeals %}
+                {% for deal in deals %}
                     <div class="card mb-3 me-3">
                         <div class="row g-0">
                             <div class="col-md-4 d-flex justify-content-center align-items-center">
