--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -33,10 +33,16 @@
                         Logout
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item  ms-2 me-2">
                     <a href="{{ path('app_post') }}" class="btn btn-post shape-circle">
                         <i class="icon fas fa-plus"></i>
                         Post...
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('app_account') }}" class="btn btn-account shape-circle">
+                        <i class="icon fas fa-user"></i>
+                        Account
                     </a>
                 </li>
             {% else %}
