--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -6,12 +6,13 @@
 <div class="row g-0 mx-auto p-2 wrapper-center">
     <div class="col-md-3 bg-secondary border border-black border-start-0 rounded-end">
         <div class="example-wrapper">
-            <h1><i class="fas fa-chart-simple"></i> Statistics</h1>
+            <h1><i class="fas fa-chart-simple"></i>Statistics</h1>
+            <p>Number of posted deals: {{ posted_deals }}</p>
         </div>
     </div>
     <div class="col-md-9">
         <div class="example-wrapper">
-            <h1><i class="fas fa-star"></i> Badges</h1>
+            <h1><i class="fas fa-star"></i>Badges</h1>
             
             <div class="badge-progress">
                 <div class="badge-progress-hexagon">
