--- a/templates/account/preview.html.twig
+++ b/templates/account/preview.html.twig
@@ -22,110 +22,57 @@
 {% endblock %}
 
 {% block body %}
-<<<<<<< HEAD:templates/account/account.html.twig
     <div class="row g-0 mx-auto p-2 wrapper-center">
-        <div class="col-md-3 border border-black rounded">
-            <div class="example-wrapper">
-                <h1><i class="fas fa-chart-simple"></i>Statistics</h1>
+        <div class="col-md-3 border bg-white rounded p-2">
+            <div class="wrapper">
+                <h1 class="fs-4"><i class="fas fa-chart-simple pe-2"></i>Statistics</h1>
                 <p>Number of posted deals: {{ posted_deals }}</p>
                 <p>Number of posted comments: {{ posted_comments }}</p>
                 <p>Rating of the hottest posted deal: {{ hottest_rating }}</p>
                 <p>Average rating of deals posted over 1 rolling year: {{ average_rating }}</p>
+                <p>Percentage of posted deals that became hot: {{ (percentage_hot_deals * 100)|number_format(0, '.', '') }}%</p>
             </div>
         </div>
-        <div class="col-md-9">
-            <div class="example-wrapper">
-                <h1><i class="fas fa-star"></i>Badges</h1>
-                
-                <div class="badge-progress">
-                    <div class="badge-progress-hexagon">
-                        <i class="fas fa-home"></i>
+        <div class="col-md-9 border bg-white rounded py-2">
+            <div class="wrapper">
+                <h1 class="fs-4"><i class="fas fa-star pe-2"></i>Badges</h1>
+                <div class="badge-progress d-flex align-items-center border-top border-bottom">
+                    <div class="badge-progress-hexagon p-2">
+                        <image src="{{ asset('build/images/supervisor.png') }}" alt="Supervisor badge" />
                     </div>
-                    <div class="badge-progress-bar">
-                        <div class="badge-progress-name">Badge 1</div>
+                    <div class="badge-progress-bar w-100 ms-1 pe-3">
+                        <div class="badge-progress-name fw-bold">Supervisor</div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: {{ (rated_deals / 300) * 100 }}%" aria-valuenow="{{ rated_deals }}" aria-valuemin="0" aria-valuemax="300"></div>
                         </div>
+                        <div class="badge-progress-desc">You voted on 300 deals</div>
                     </div>
                 </div>
-                
-                <div class="badge-progress">
-                    <div class="badge-progress-hexagon">
-                        <i class="fas fa-envelope"></i>
+                <div class="badge-progress d-flex align-items-center border-bottom">
+                    <div class="badge-progress-hexagon p-2">
+                        <image src="{{ asset('build/images/cobaye.png') }}" alt="Cobaye badge" />
                     </div>
-                    <div class="badge-progress-bar">
-                        <div class="badge-progress-name">Badge 2</div>
+                    <div class="badge-progress-bar w-100 ms-1 pe-3">
+                        <div class="badge-progress-name fw-bold">Cobaye</div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: {{ (posted_deals / 10) * 100 }}%" aria-valuenow="{{ posted_deals }}" aria-valuemin="0" aria-valuemax="10"></div>
                         </div>
+                        <div class="badge-progress-desc">You have posted at least 10 deals</div>
                     </div>
                 </div>
-                
-                <div class="badge-progress">
-                    <div class="badge-progress-hexagon">
-                        <i class="fas fa-briefcase"></i>
+                <div class="badge-progress d-flex align-items-center border-bottom">
+                    <div class="badge-progress-hexagon p-2">
+                        <image src="{{ asset('build/images/report.png') }}" alt="Internship report badge" />
                     </div>
-                    <div class="badge-progress-bar">
-                        <div class="badge-progress-name">Badge 3</div>
+                    <div class="badge-progress-bar w-100 ms-1 pe-3">
+                        <div class="badge-progress-name fw-bold">Internship report</div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: {{ (posted_comments / 10) * 100 }}%" aria-valuenow="{{ posted_comments }}" aria-valuemin="0" aria-valuemax="10"></div>
                         </div>
+                        <div class="badge-progress-desc">You have posted at least 100 comments</div>
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
-=======
-<div class="row g-0 mx-auto p-2 wrapper-center">
-    <div class="col-md-3 bg-secondary border border-black border-start-0 rounded-end">
-        <div class="example-wrapper">
-            <h1><i class="fas fa-chart-simple"></i> Statistics</h1>
-            <p>Number of posted deals: {{ posted_deals }}</p>
-        </div>
-    </div>
-    <div class="col-md-9">
-        <div class="example-wrapper">
-            <h1><i class="fas fa-star"></i> Badges</h1>
-            
-            <div class="badge-progress">
-                <div class="badge-progress-hexagon">
-                    <i class="fas fa-home"></i>
-                </div>
-                <div class="badge-progress-bar">
-                    <div class="badge-progress-name">Badge 1</div>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="badge-progress">
-                <div class="badge-progress-hexagon">
-                    <i class="fas fa-envelope"></i>
-                </div>
-                <div class="badge-progress-bar">
-                    <div class="badge-progress-name">Badge 2</div>
-                    <div class="progress">
-                        <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="badge-progress">
-                <div class="badge-progress-hexagon">
-                    <i class="fas fa-briefcase"></i>
-                </div>
-                <div class="badge-progress-bar">
-                    <div class="badge-progress-name">Badge 3</div>
-                    <div class="progress">
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-</div>
->>>>>>> fc307d67e0cbfa6db99505aadcf0b8b2c09fbf1d:templates/account/preview.html.twig
 {% endblock %}
