--- a/templates/deal/deal.html.twig
+++ b/templates/deal/deal.html.twig
@@ -6,7 +6,7 @@
 <div class="row g-0 mx-auto p-2 wrapper-center">
     {# card du deal #}
     <div class="col-md-9">
-        <h1>Deal detail</h1>
+        <h1 class="pb-3">Deal detail</h1>
         <div class="card mb-3 me-3{% if deal.isExpired %} expired{% endif %}">
             <div class="row g-0">
                 <div class="col-md-4 d-flex justify-content-center align-items-center pt-5">
