--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
-        <h1>Deals list</h1>
+        <h1 class="pb-3">Deals list</h1>
         <div class="col-9">
             <ul class="deal-list">
                 {% for deal in deals %}
