--- a/templates/hot/hot.html.twig
+++ b/templates/hot/hot.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
         <div class="col-9">
-            <h1>Hot Deals</h1>
+            <h1 class="pb-3">Hot Deals</h1>
             <ul>
                 {% for deal in hotDeals %}
                     <div class="card mb-3 me-3">
