--- a/templates/coupon/coupon.html.twig
+++ b/templates/coupon/coupon.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
-        <h1>Coupons list</h1>
+        <h1 class="pb-3">Coupons list</h1>
         <ul class="deal-list">
             {% for coupon in coupons %}
                 <div class="card mb-3 me-3">
