--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
-        <h1>Create a Deal</h1>
+        <h1 class="pb-3">Create a Deal</h1>
         <div class="row mb-3 col-4 bg-white p-2">
             {{ form_start(form, {'attr': {'class': 'post-deal', 'novalidate': 'novalidate'}}) }}
                 <div class="form-group">
