--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -145,4 +145,36 @@
     }
 }
 
+.user-bar {
+    background-color: #f2f2f2;
+    padding: 10px;
+  }
+  
+  .user-info {
+    display: flex;
+    align-items: center;
+  }
+  
+  .profile-picture {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .user-details {
+    font-size: 14px;
+  }
+  
+  .user-name {
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .user-account-created,
+  .user-status {
+    margin: 0;
+    color: #888888;
+  }
+
 // text color : #35373b
