--- a/templates/account/alert.html.twig
+++ b/templates/account/alert.html.twig
@@ -32,12 +32,13 @@
 {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
-</div>
+    <div class="row g-0 mx-auto p-2 wrapper-center">
+        <h1 class="pb-3">Deal alerts</h1>
+        {{ form_start(alertForm) }}
+            {{ form_row(alertForm.keyword) }}
+            {{ form_row(alertForm.minTemperature) }}
+            {{ form_row(alertForm.notificationFrequency) }}
+            {{ form_row(alertForm.save) }}
+        {{ form_end(alertForm) }}
+    </div>
 {% endblock %}
